...
          tabBarIcon: tabIcon("chart-line"),
        }}
      />
      <Tabs.Screen
        name="budgets"
        options={{
          title: "Budgets",
          headerShown: false,
          tabBarIcon: tabIcon("wallet-outline"),
        }}
      />
      <Tabs.Screen
        name="profile"
...
